--- a/style/style.css
+++ b/style/style.css
@@ -11,10 +11,11 @@
     padding: 21px 32px;
     border-radius: 8px;
     background: rgb(82, 195, 3);
-    border:none ;
+    border: none;
     color: white;
     font-size: 20px;
     font-weight: 600;
+   
 }
 
 body {
@@ -62,3 +63,71 @@ header {
     font-weight: 500;
     opacity: 0.7;
 }
+
+/* Favorite brands section style start */
+.favorite-brands {
+    max-width: 1320px;
+    width: 100%;
+    margin: 80px auto;
+
+}
+
+.favorite-brands-contant {
+    text-align: center;
+    color: rgb(16, 16, 16);
+}
+
+.favorite-brands-contant>p {
+    font-size: 24px;
+    font-weight: 500;
+    opacity: 0.6;
+}
+
+.favorite-brands-contant>h2 {
+    font-size: 48px;
+    font-weight: 700;
+    margin: 16px auto;
+}
+.card-section{
+    display: flex;
+    justify-content: space-between;
+}
+.card {
+    width: 400px;
+    color: rgb(16, 16, 16);
+    text-align: center;
+    margin-top: 48px;
+    border: 1px solid  rgba(16, 16, 16, 0.6);
+    border-radius: 10px;
+    padding: 5px;
+
+}
+.card-img>img {
+    width: 100%;
+}
+
+.card-taitel {
+    font-size: 24px;
+    font-weight: 600;
+    border-radius: 8px;
+    width: 187px;
+    background: rgba(82, 195, 3, 0.15);
+    margin: 24px auto;
+    padding: 14px 32px;
+
+}
+.offer{
+    font-size: 40px;
+    font-weight: 600;
+
+}
+.card-description{
+font-weight: 500;
+line-height: 28px;
+margin: 24px 0px;
+}
+.favorite-brands-btn{
+    text-align: center;
+    margin: 64px auto;
+}
+/* Favorite brands section style end */
